# django_order_product

./: .env.example  README.md  pyproject.toml
backend/accounts/: admin.py  models.py
backend/accounts/migrations/: 0001_initial.py
backend/api/: urls.py
backend/api/v1/: filters.py  serializers.py  urls.py  views.py
backend/backend/: settings.py  urls.py
backend/core/: models.py
backend/orders/: admin.py  models.py
